src/App.css
* {
  margin: 0;
  padding: 0;
  outline: none;
  box-sizing: border-box;
}

:root{
  --primary-color:#0b3fcc;
  --primary-background:linear-gradient(60deg, #0b3fcc 30%, #4811c7 70%);
  --completed-todo:linear-gradient(155deg, #007940 30%, #218e16 70%);
  --background-gradient: linear-gradient(120deg, #15572d 20%, #235848 100%);
  --deleting-red: rgb(206, 46, 46);
}
body {
  background: linear-gradient(
    90deg,
    rgba(48, 16, 255, 1) 0%,
    rgba(100, 115, 255, 1) 100%
  );
  color: white;
  font-family: "Poppins", sans-serif;
  padding-top: 10px;
  padding-bottom: 10px;
}

.center{
  min-height: 100vh;
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.container{
  background-color: black;
  max-width: 600px;
  border-radius: 15px;
  padding-top: 20px;
  padding-bottom: 20px;
  background-image: radial-gradient(circle at top right, #1f1d44, #140d2d, #000000);
}

header {
  font-size: 2rem;
}

.title{
  background: transparent;
  color: white;
  font-family: 'Poppins';
  border: none;
  font-size: 38px;
  text-align: center;
  width: 100%;
}

header,
form {
  min-height: 20vh;
  display: flex;
  justify-content: center;
  align-items: center;
  padding-left: 15px;
  padding-right: 15px;
}
form input,
form button {
  padding: 0.5rem;
  font-size: 1.5rem;
  text-align: left;
  
}

form input[type="text"]{
  min-width: 70px;
  width: 100%;
  max-width: 250px;
  height: 60px;
  background-color: black;
  color: white;
  border: var(--primary-color) 2px solid;
  border-radius: 15px 0 0 15px ;
}

form input[type="text"]:focus{
  background-color: black;
  color: white;
  border: var(--primary-color) 2px solid;
}
form button {
  background: var(--primary-background);
  color: white;
  border: var(--primary-color) 2px solid;
  cursor: pointer;
  transition: all 0.3s ease;
  height: 60px;
  border-radius: 0 15px 15px 0;
}

.todo-container {
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.todo-list {
  min-width: 30%;
  list-style: none;
}


.completed{
  background: var(--completed-todo)!important;
  color: white!important;
  text-decoration: line-through;
}

.deleting{
  background-color: var(--deleting-red)!important;
  transform: translateX(90px);
  opacity: 0;
}

.deleting input,
.deleting button{
  opacity: 1;
}

.todo {
  animation-name: appear;
  animation-duration: 1s;
  animation-fill-mode: backwards;
  overflow: hidden; 
  padding-left: 10px;
  margin: 0.5rem;
  background: white;
  font-size: 1.2rem;
  color: black;
  display: flex;
  justify-content: space-between;
  align-items: center;
  transition: all 1s ease;
  border-radius: 16px;
}

.todo input[type="checkbox"]{
  transform: scale(1.5);
  opacity: 0;

}

.todo:hover input[type="checkbox"]{
  opacity: 1;
}

.filter-todo {
  padding: 1rem;
}
.todo li {
  flex: 1;
}

.trash-btn {
  background: var(--deleting-red);
  color: white;
  border: none;
  padding: 1rem;
  cursor: pointer;
  font-size: 1rem;
  height: 100%;
}

.todo button{
  opacity: 0;
}

.todo:hover button{
  opacity: 1;
}

.todo-item {
  padding: 0rem 0.5rem;
  max-width: 400px;
  border-radius: 20px;
}

.fa-trash,
.fa-check {
  pointer-events: none;
}

/*CUSTOM SELECTOR */
select {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: 0;
  box-shadow: none;
  border: 0 !important;
  background-image: none;
}

/* Custom Select */
.select {
  margin: 1rem;
  position: relative;
  overflow: hidden;
  border: var(--primary-color) 2px solid;
  border-radius: 15px;
  overflow: hidden;
}
select {
  color: white!important;
  font-family: "Poppins", sans-serif;
  cursor: pointer;
  min-width: 9rem;
  width: 9rem;
  max-width: 9rem;
  background-color: black!important;
}
/* Arrow */
.select::after {
  content: "\25BC";
  position: absolute;
  top: 0;
  right: 0;
  padding: 0.5rem;
  padding-top: 1rem;
  padding-bottom: 1rem;
  background: var(--primary-background);
  cursor: pointer;
  pointer-events: none;
  border-radius: 0;
}




@keyframes appear {
  from {
    transform: translateX(-80px);
    opacity: 0;
    background-color: #39805e;
  }
  to {
    transform: translateX(0);
    opacity: 1;
  }
}
@media screen and (max-width: 400px){
  .select::after{
    opacity: 0;
  }

  .select{
    padding-left: none!important;
  }
}

@media screen and (max-width: 600px){
  .container{
    width: 100%;
    border-radius: 0;
  }
}

@media screen and (min-width: 440px){
  .todo{
    width: 400px;
  }
}

